--- a/“lab_three_ipynb”.ipynb
+++ b/“lab_three_ipynb”.ipynb
@@ -1011,7 +1011,7 @@
       },
       "source": [
         "# Part 3: An Architecture for Images\n",
-        "At this point, we have discussed classifier free guidance, and the necessary considerations that must be made on the part of our model and in training our model. What remains is to actually discuss the choice of model. In particular, our usual choice of an MLP, while fine for the simple distributions of the previous lab, will no longer suffice. To this end, we will a new convolutional architecture - the **U-Net** - which is specifically tailored toward images. A diagram of the U-Net we'll be using is shown below. ![image.png](attachment:bd703834-9239-4ed3-b8c1-9639fc971575.png)"
+        "At this point, we have discussed classifier free guidance, and the necessary considerations that must be made on the part of our model and in training our model. What remains is to actually discuss the choice of model. In particular, our usual choice of an MLP, while fine for the simple distributions of the previous lab, will no longer suffice. To this end, we will a new convolutional architecture - the **U-Net** - which is specifically tailored toward images. A diagram of the U-Net we'll be using is shown below."
       ]
     },
     {
@@ -1419,22 +1419,6 @@
       "id": "K9rlLQjkSsJF",
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "UmYu13HcSsv5"
-      },
-      "id": "UmYu13HcSsv5"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "Intx9Sz6StF1"
-      },
-      "id": "Intx9Sz6StF1"
     },
     {
       "cell_type": "markdown",
